# coretext

./: .context_check.tmp  .gitignore  README.md  bmad.md  bmad_quick_demo.md  demo.md  demo_epic_1.md  demo_epic_2.md  extension.yaml  gemini-extension.json  history.txt  ignored_at_root.md  pyproject.toml  query_surreal.py  review_findings.md  second.md  storage.py  test_storage.py
.coretext/: post_commit_log.txt  project_context.md  schema_map.yaml
_bmad-output/: review_report.md
_coretext/: demo.md  test_sync.md
_coretext-knowledge/: release-demo-guide.md  technical_debt.md  test.md
chat_history/: 1-4_3rd_code-review.md  1_epic_retrospective.md  5-1_party-mode.md  5-2_party-mode.md  5-3_code-review.md  5-6_quick-dev.md
commands/: coretext.toml
coretext/: config.py
demo/: demo-story.md  (+2 more)
experiments/trore/apps/api/: README.md  alembic.ini  package.json  pyproject.toml
experiments/trore/apps/api/alembic/versions/: feb328d92ecc_create_listings_table.py
experiments/trore/apps/api/app/: database.py  main.py  models.py  schemas.py
experiments/trore/apps/api/app/api/v1/: listings.py
experiments/trore/apps/api/app/db/: session.py
experiments/trore/apps/api/app/models/: listings.py
experiments/trore/apps/api/app/routers/: listings.py
experiments/trore/apps/api/app/schemas/: listing.py
experiments/trore/apps/api/migrations/: env.py
experiments/trore/apps/api/migrations/versions/: 0484beaf0a43_initial_listings_table.py
experiments/trore/apps/api/tests/: test_listings.py  test_main.py
experiments/trore/apps/api/tests/api/v1/: test_listings.py
(+247 files in other folders)
